# json-schema-macro

./: Cargo.toml  README.md
json-schema-macro/: Cargo.toml
json-schema-macro-macros/: Cargo.toml
json-schema-macro-macros/src/: eval.rs  lib.rs  parse.rs
json-schema-macro/examples/: address.rs  uppercase.rs
json-schema-macro/src/: lib.rs
json-schema-macro/tests/: test.rs
json-schema-macro/tests/schemas/: addresses.json
src/: eval.rs  lib.rs  parse.rs
tests/: test.rs
